tm/tests/snapshots/cli_plan__now_schema.snap
---
source: tm/tests/cli_plan.rs
expression: schema(&idle)
---
{
  "active": "null",
  "blocks_done": "integer",
  "budget_blocks": "integer",
  "current": {
    "end": "string",
    "energy": "integer",
    "item": "string",
    "kind": "string",
    "mark": "string",
    "minutes": "integer",
    "start": "string",
    "text": "string"
  },
  "date": "string",
  "next": [
    {
      "end": "string",
      "energy": "null",
      "item": "string",
      "kind": "string",
      "mark": "string",
      "minutes": "integer",
      "start": "string",
      "text": "string"
    }
  ],
  "now": "string"
}
