tm/tests/snapshots/cli_plan__plan_diff_schema.snap
---
source: tm/tests/cli_plan.rs
expression: schema(diff)
---
{
  "added": [
    "string"
  ],
  "drift_min": "integer",
  "had_previous": "bool",
  "moved": [
    [
      "string"
    ]
  ],
  "removed": [
    "string"
  ]
}
