tm/tests/snapshots/cli_plan__plan_schema.snap
---
source: tm/tests/cli_plan.rs
expression: schema(&json)
---
{
  "blocks_done": "integer",
  "budget_blocks": "integer",
  "date": "string",
  "diagnostics": {
    "a_capacity_lost": "integer",
    "blocked": [
      [
        "string"
      ]
    ],
    "conflicts": [],
    "deferred": [],
    "dropped_tail": [
      "string"
    ],
    "hot": [],
    "impossible": [],
    "notes": [],
    "plan_honesty": "number",
    "rest_debt_min": "integer",
    "underused": [],
    "waiting": [
      "string"
    ]
  },
  "diff": "null",
  "explain": "null",
  "hash": "string",
  "priorities": [
    {
      "allocation_min": "integer",
      "allocation_min_exact": {
        "den": "string",
        "num": "string"
      },
      "avail_min": "integer",
      "avail_min_exact": {
        "den": "string",
        "num": "string"
      },
      "bin": "null",
      "class": "string",
      "hysteresis_applied": "bool",
      "id": "string",
      "k": "integer",
      "need_min": "integer",
      "p": "integer",
      "raw_p": "integer",
      "shortfall_min": "integer",
      "shortfall_min_exact": {
        "den": "string",
        "num": "string"
      },
      "u": "null",
      "until": "null"
    }
  ],
  "segments": [
    {
      "end": "string",
      "energy": "integer",
      "item": "string",
      "kind": "string",
      "mark": "string",
      "minutes": "integer",
      "start": "string",
      "text": "string"
    }
  ],
  "window": [
    "string"
  ],
  "wrote": [
    "string"
  ]
}
